# kmagick

./: .gitignore  ANDROID_BUILD.md  README.md  quick-android-build.sh  test-android-config.sh
.github/workflows/: android.yml  build.yml
android/: CMakeLists.txt  README.md  build-all-targets.sh  build-with-cargo-ndk.sh  build.gradle  dummy.cpp
rust/: .cargo-ndk.toml  Cargo.toml  Readme.md  build-android-enhanced.ps1  build-android.ps1  build-android.sh  build-win.ps1  example-cargo-ndk.sh  rust-toolchain.toml  setup-android.sh
rust/.cargo/: config.toml
rust/kmagick/: Cargo.toml  build.rs
