[workspace]
members = [
  "kmagick",
  "jni-macros",
  "jni-macros",
  "jni-tools"
]

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[profile.release]
lto = true
codegen-units = 1
strip = true

# Android-specific optimizations
[profile.release.package.kmagick-rs]
opt-level = "s"  # Optimize for size on mobile
